--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <button id="getImage">Get Image & Save to Cache</button>
     <button id="readCache">Read from Image</button>
 
-    <script src="./main.js"></script>
+    <div id="results"></div>
+
+    <script src="./js/main.js"></script>
 </body>
 </html>
